# multi-agent-system

./: .gitignore  README.md  pyproject.toml  requirements.txt
agentic_runtime/: __init__.py  agent_policies.py  agents.py  behavior_tree.py  blackboard.py  config.py  context_compiler.py  controller.py  coordinator.py  domain.py  example.py  execution.py  hfsm.py  llm.py  mcp.py  observability.py  planner.py  retry.py  runtime_policies.py  synthesizer.py  system.py  tools.py  validators.py
docs/: README.md  developer_guide.md  docs.md  system_overview.md
docs/diagrams/: activity_diagram.md  class_diagram.md  communication_diagram.md  component_diagram.md  composite_structure_diagram.md  detailed_sequence.md  high_level_sequence.md  interaction_diagram.md  object_diagram.md  package_diagram.md  profile_diagram.md  state_diagram.md  timing_diagram.md
examples/: README.md  cli_chat.py  custom_agents_chat.py
mcp/: README.md  simple_server.py
tests/: test_regressions.py  test_smoke.py
